<?xml version="1.0"?>
<package>
  <name>read_pos_ag</name>
  <version>0.0.0</version>
  <description>The read_pos_ag package</description>

  <maintainer email="raffaele@todo.todo">raffaele</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>

  </export>
</package>
