<?xml version="1.0"?>
<package>
	<name>ros_ag</name>
	<version>0.0.0</version>
	<description>The ros_ag package</description>

	<maintainer email="giovanni@todo.todo">giovanni</maintainer>

	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>
	<run_depend>gazebo_ros</run_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>rviz</build_depend>
	<build_depend>tf</build_depend>
	<build_depend>urdf</build_depend>
	<build_depend>xacro</build_depend>
	
	<run_depend>geometry_msgs</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>rviz</run_depend>
	<run_depend>tf</run_depend>
	<run_depend>urdf</run_depend>
	<run_depend>xacro</run_depend>


	<export>
	</export>
</package>
